--- a/intro_to_html/index.html
+++ b/intro_to_html/index.html
@@ -26,7 +26,7 @@
 <img src="images/water_1.jpg" alt="Water">
     <hr>
     <h2>What is a Mermaid?</h2>
-    <h3>Everyone has seen portrayls of mermaids, such as Disney's "The Little Mermaid", but what actually are mermaids?</h3>
+    <h3>Everyone has seen portrayals of mermaids, such as Disney's "The Little Mermaid", but what actually are mermaids?</h3>
     <p>A mermaid is a mythical marine creature.  Mermaids have the tail of a fish but the upper body of a human being.  Although there are male mermen, 
        mermaids in folklore and paintings were often portrayed as females.  In European folklore, mermaids had magical and prophetic powers.  Mermaids in
        European folklore also loved singing and dancing.  Despite living long lives, mermaids were considered mortal, but had no souls.  Mermaids in general have often been seen as 
